Working draft, added test html

--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
     </style>
   </head>
   <body>
-    <h1>My Chrome Extension</h1>
+    <h1>Charms</h1>
     <label>After Load Script:</label>
     <textarea id="scriptInput" rows="4" cols="30"></textarea>
     <br />
